--- a/page12.html
+++ b/page12.html
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -66,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6LPryrx6o" id="content5-47">
+<section class="engine"><a href="https://mobirise.info/b">create a site</a></section><section class="mbr-section content5 cid-r6LPryrx6o" id="content5-47">
 
     
 
@@ -102,7 +101,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6RQcKLwkOT7ACb9sfZ1OIDs+dJlGCIfY9n8qrh2hNQCMaJVon9+nxPFU/PV/rjWcVvOZgtOTHweZv20V5q1D9EQB6xgrjOZbxSMHNCgcvea2u65Ku686HIrJYtK+FIKL">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yLSQuowkU5wzLA2rcqkOdDHO1QhSHh3Dznam5sJZC96f0KnbDVToyrg9ERqH+ETQ84lUzjiOIGSD89S/gDOfOUYgc4I4CIeZB5ZEUPXwNSZ0+gp2aVlUCGUedCTP6LLJ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -160,12 +159,9 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
-    <input name="animation" type="hidden">
-  </body>
+</body>
 </html>
