--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
 
     
 
@@ -101,7 +101,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ak1W071CtIEabvXrpUdGjLyDAL/XUfna7soDKXySOiS26oH0hnrwHW+fxYivRuXvvlxVDAIwRGffPwaDGx4VCS5wPakisYwDLu4oSQHfrmYYSx/Sdcf5D7yI2mluLki5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="umd+nSFjm9Ro0omnxhgbLDROzwU/4+F46RHiKwQ9+4IFW0y3usc5U4ADhJ9qUyzwcfx3tAz0USFZayIUHml+ghYKwf09L4IQLZq1+ohFx76FgSaR3JjuA9fnFz9Wxvnk">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
