create github pages

--- a/page15.html
+++ b/page15.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="mbr-section content5 cid-r6PqtbXkRV" id="content5-3z">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-r6PqtbXkRV" id="content5-3z">
 
     
 
@@ -101,7 +101,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3M9YWxjMtnd2TfU6E63K0GuUp/THkKcup/9OHkLIyTRZdKgpPaatgMJLkYXagFLmyuvMtQ6o0c1D8vQZlp8LBMVU9CALjfFLnvqe8hFR9GLthli7Yhc4K67zi0dkY+/7">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6750vMC8iRQAJlRYTlURtG1HULQLdsrs4jbuIm32XQ/oy8z8OBa2xurNEilJH6ABIXh4YKOGCLH07bJM61g+H1hgIZp7q1Ae/oM7IHg1ksdhIQAK39GLWRweK4UPjFzB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
