--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
 
     
 
@@ -101,7 +101,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hjaPDo3ipE7HEQN79iXhn4rHEvoCCNYzqfZ6OJ+tQ1DmZXA2gc5EMH/Lua7elg6R3x76Ut7IFSf4qNfFS0V7MjDH+lFHTJNwaFDelqbhqyFELfgFF8I7RmTjEklsV20K">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IPorQzX+hoChLrXiqbnXgojuwdj3/K6hbaTAKJ/Pjr0P82t+TpXQ/xVIarKyTav2oTZYj/5maoLWJII3lfemSm3xskKxTArWUfC/7l4X2nWctlo7F2kdqmUAruYgZh3x">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
