--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="mbr-section content5 cid-r6ybzGY77X" id="content5-45">
 
     
 
@@ -110,7 +110,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xwKu9mbDUzqOF2o0XkN1wU4reMOefa1oNaPH+KNygE1jx3U/2d1qE7/dkEOHl253pyk8wTDQtiF3gYCwra7Dv8i2T69yXZUm1jo4vQ34PnXTKh0WBeeJmK/A61KGl1QI">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4QvJgNuW97zyU0B0CoTnQqH2ulIM4fR0LgdQqFdCgz7MeCQ5kovSKK12YU/mo1sXnC8j9fSg8neqA2q+POFblsHjvHobeh1Dde7OV4Q7AeI12HYsyxSnWGpNegOGHEOH">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
