--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -119,7 +119,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kXyBc6ok1xGAIZAwo2enLA0F7MrnTwX3iPSG+YTDw4Ez0+KPik2JgNNe6A3GvvgKrpwgvIR88Rb7A57k5/stba9BY9svPCDsiMV5NAUYyHtI3U9qUNLVt+yZ/gybX8ko">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A+NrnIFVWOOpEOBaONkavRmb005exWIDFVv0hCtas/nJO5wN663OsHyEl6p5xibu4syQpdu1SycBdbuvjJegDAAgUplkApEoxKUNO3B507Su0Ngz+whyVTnKPz1ca73L">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
