--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -119,7 +119,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ETGlyHNRAzgFFPsO8mYK+OkkIubP+zma0j2Mu+aEHktkLCn8GQ6gCuLTmtpQwo4PTm+kqISEGM8Ik06LMHWrRSRQezBwocvIMdoBnP+7i8vu7VUztfoXiXpCxWsk4UwG">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gnq9Typ+pj42AfJ8Ah+bqRvhRsXN9GvPjSl7fNMdwJx2ywGD2bAX3pVDNrYtKXbmIAc2q36DNdBxQyycRaF3mxebZMvQRgejmRFx8IdrUECB7UFpzSn+AYYiFjanUGU1">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
