create github pages

--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -119,7 +119,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xiObZnPwB5ZO4Pam00Zk0BpFjb/dbU3vCxhw62oe1GTPXTd0yYUeoSo4salNcc+CLOVVoBZ7+HEnl4OAbjYAm9lBUbBg/qkJlBH+LY7mqML4iL57pojokxcXgTuIiXvX">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SyPK1MXMo7T+9umuYz4BpqFp/cHPJpD5tcN3wfLdr7PJoTHOzXEnlO+BzrKddEpXZH+Vn5G+YS4+V0MxVOl3wUTce2Oy20yxEjG7Ykk/Oz+TMffiCPeohLSJagtEmxzG">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
