--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -119,7 +119,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fH2QmCFIYQgeXR93VrJwgEkgsZGxCg4NVbMCQ7ZolXChpNwGe9NHjOzddT2WpLEsTLcwFwdELedKhnd64mID9sWFSK+Nx/GFOIZKGZqubQVhNLBInRXY+ox6pKtpM/4b">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="brQvvHTYO1QvMKczu+flvXIHjdG5fIVOn6lmUdBz/RxklKjgr8CnQtHvbkOxUCFD2CHOdQa7AFTIwTsJW+LelqS/TfOXzXc+9gr0qilHbsJjCn9TxHB7mQ84WTQUTr8H">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
