--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="stUijslzx9cU/ISzFHwKEiSvA7GerQphpb4LvYtmTu+LYCOWa1N40RmXt1fO1dqvBGP94xkC5jGnJP1fon+Ok86YHSRV+SMENU3a8WTqM9sfqPrYNW070wpZ7Pv23EUo">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SGJuDGxTg8WRx7KOREJRXSQefZ9jpo4cWJdIQTsegqmuyVxHI1nmpY32uTqrcOsyFOnLG3a9AuEK2IMRh2GdUXwTb1VhwsgFkJvmNisyqn9W0K2tsM9plo90YeBPaJbW">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
